
Bug IDs that start with "G" can be found in the GlassFish Issue Tracker
(after removing the "G"):

	https://glassfish.dev.java.net/issues

Bug IDs that start with "K" can be found in the Kenai Bugzilla
(after removing the "K"):

	https://kenai.com/bugzilla/


		  CHANGES IN THE 1.4.4 RELEASE
		  ----------------------------
The following bugs have been fixed in the 1.4.4 release.

6905730	MimeMessage.parse() is very slow on malformed message content
6910675	IMAP provider can lose track of message sequence numbers
G 11069	update the mail.jar manifest to include DynamicImport-Package
<no id>	add mail.mime.windowsfilenames System property to handle IE6 breakage
<no id>	properly disable TOP if POP3 CAPA response doesn't include it
<no id>	add mail.pop3.disablecapa property to disable use of the CAPA command
<no id>	fix support for Properties objects with default Properties objects
<no id>	integrate NTLM support, no longer needs jcifs.jar
<no id>	add mail.pop3.cachewriteto property, default false
<no id>	add mail.pop3.filecache.enable property for caching messages in tmp file
<no id>	add mail.mime.ignorewhitespacelines property, default false
<no id>	add support for IMAP UNSELECT command
<no id>	add mail.mime.contentypehandler System property, to clean Content-Type
<no id>	add mail.mime.allowencodedmessages System property
<no id>	add support for SASL authentication to SMTP provider


		  CHANGES IN THE 1.4.3 RELEASE
		  ----------------------------
The following bugs have been fixed in the 1.4.3 release.

6829124	IMAPFolder deadlock using IMAP IDLE
6850882	IMAPMessage returns wrong getMessageNumber() from messageRemovedEvent
6857090	JavaMail is not sending HELO / EHLO according to specs
6872072	QPEncoderStream write method eats up trailing white space of a string
6875367	LineOutputStream wraps IOException instead of throwing it directly
6890265	SMTPTransport does not close socket if STARTTLS is req'd but not sup'd